--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Dongle&display=swap');
+
+* {
+    font-family: 'Dongle', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+    margin-top: 20px;
+    /* background-color: yellow; */
+    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+        rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+        rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
+    padding: 20px;
+    border-radius: 20px;
+    font-size: 25px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar-heading,
+.signup-heading,
+.login-heading,
+.confirm-window-heading {
+    font-family: 'Dongle', sans-serif !important;
+    font-size: 60px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar-user {
+    background-color: lightgray;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-user-portal {
+    font-size: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.story-body {
+    margin-top: 30px;
+}
+
+.create-story {
+    font-size: 25px;
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.story-card {
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 10px;
+    margin-bottom: '30px' !important;
+}
+
+.story-heading {
+    font-family: 'Dongle', sans-serif !important;
+}
+
+.navbar-active {
+    color: red;
+    border: 1px solid black;
+    border-radius: 15px;
+    padding: 0 15px 0 15px;
+}
+
+.navbar-link {
+    cursor: pointer;
 }
